welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:21: error: reassignment to val
				c3 = 0
                                   ^